<?xml version="1.0" encoding="utf-8"?>
 <ScrollView 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:scrollbars="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="#F0F0F0"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="left"
        android:text="@string/seekTitle"
        android:textColor="#000000"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/seeks_display_seekName"
            android:textColor="#000000"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/edit_seek_seekName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:background="@drawable/register_input"
            android:gravity="center_vertical|left"
            android:paddingLeft="5dp"
            android:inputType="text"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/seek_display_style"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_seek_style"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:background="@drawable/register_input"
            android:gravity="center_vertical|left"
            android:paddingLeft="5dp"
            android:inputType="text"
            android:textColor="#000000" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/seek_display_count"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_seek_seekCount"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:background="@drawable/register_input"
            android:gravity="center_vertical|left"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:textColor="#000000" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/seek_display_detail"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_seek_seekDetail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:background="@drawable/register_input"
            android:layout_gravity="right"
            android:paddingLeft="5dp"
            android:inputType="text"
            android:textColor="#000000" />
    </LinearLayout>

    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@null"
        android:src="@drawable/line_" />

    <Button
        android:id="@+id/button_register_commite"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/register_button_commit"
        android:textColor="#FFF"
        android:textSize="18sp" />
</LinearLayout>
</ScrollView>